# Change Log
All notable changes to this project will be documented in this file.  In the future, this project may adhere to Semantic Versioning.

CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend = Change is not user facing

## [2016-02-06] [Since 2016-01-30 Integration]


## [2016-01-30] [Since 2016-01-23 Integration]
### Added:
- #51: Division admin's can now hide / show automatic Latest Updates from the "More ..." page.
- #276: Administrators can now label Internal Medicine specialists with Int Med by checking a checkbox in the edit form that asks about what kind of Internal Medicine fellowship they have

### Changed:
- Changed wording of specialist page statuses from "This physician only works out of ..." to "Only works out of ..."
- Backend Maintenance: implemented security / privacy protection updates and removed old database cruft.

### Fixed:
- #304: Fix issue in Specialty city filter that caused the filter to incorrectly scope clinics down under a few conditions, such as if "No Cities" was checked and then another city was checked
- #305: Revert change in Latest Updates so that updates now collapse again by date and record
- #307: Fixed bug that temporarily affected the creation of new Specialists
- Fix incorrect No Division count summaries on All Specialists pages

## [2016-01-23] [Since 2016-01-16 Integration]
### Added:
- User profile page now shows date of Last Vist and Sign Up

### Changed:
- All Specialists admin page now shows total numbers of Specialists by division
- Backend: Upgraded Ruby version to 2.2.3 from 2.1.6

### Fixed:
- #254: removed 'fee structure info available' checkbox
- #154: token editors can no longer remove clinic locations or specialist offices
- #298: updates to specialist offices and clinic locations being lost

## [2016-01-16] [Since 2016-01-09 Integration]
### Changed:
- #154: Clinic form now asks users to confirm before deleting location