@@ -1,0 +1,6 @@
+#content #container {
+
+  .dropdown__link:hover {
+    text-decoration: none;
+  }
+}
