@@ -87,7 +87,7 @@ class Ability
         can [:change_email, :update_email, :change_password, :update_password, :change_local_referral_area, :update_local_referral_area], User
 
         #can manage their own news items
-        can [:index, :new, :create, :show], NewsItem
+        can [:index, :new, :create, :show, :copy], NewsItem
         can [:edit, :update], NewsItem do |news_item|
           user.divisions.include? news_item.owner_division
         end
