@@ -28,8 +28,20 @@
             - if @news_item.user_can_unborrow?(current_user, division)
               = link_to "(Stop Borrowing)", update_borrowing_news_item_path(@news_item, division_id: division.id, borrow: false)
 
-  %p.admin.btn-group
+  .btn-group
     - if can? :update, @news_item
       = link_to("<i class='icon-pencil'></i>".html_safe + " Edit", edit_news_item_path(@news_item), :class => "btn ajax")
     - if can? :destroy, @news_item
       = link_to("<i class='icon-trash'></i>".html_safe + " Delete", @news_item, :confirm => "Delete #{@news_item.title}?", :method => :delete, :class => "btn")
+    - if @news_item.copyable_to(current_user).any?
+      %button{"class" => "btn dropdown-toggle", "data-toggle" => "dropdown"}
+        %i.icon-copy
+        %span= "Copy to"
+        %span.caret
+      %ul.dropdown-menu{style: "margin-top: 0px"}
+        - @news_item.copyable_to(current_user).each do |division|
+          %li
+            = link_to division.name,
+              copy_news_item_path(@news_item, target_division_id: division.id),
+              method: :post,
+              class: "dropdown__link"
