@@ -6,6 +6,11 @@ Local-only = Changes not reflected in Source Code
 Backend = Change is not user facing
 
 ## [2016-02-06] [Since 2016-01-30 Integration]
+### Added:
+- #313: Allow divisional admins and super admins to easily copy news items to other divisions
+
+### Fixed:
+- optimize regeneration of LatestUpdates
 
 
 ## [2016-01-30] [Since 2016-01-23 Integration]
